--- a/spotify-album-art/package.json
+++ b/spotify-album-art/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
